css/main.css
html{
  background-image: linear-gradient(#F7FAF9, #C6D1E1);
  background-color: #C6D1E1;
  background-attachment: fixed;
  height:100%;
  background-repeat: no-repeat;
  font-family:'Helvetica Neue', 'Helvetica', 'Arial', 'Sans-Serif';
}

body {
    margin: 10px;
    width: auto;
}
nav ul, footer ul {
    display: flex;
    justify-content: space-around;
    padding: auto;
    list-style: none;
    font-weight: 400;
    line-height: 1.2em;
}
nav ul li, footer ul li {
    display: inline;
    margin-right: 0;
}
a {
    text-decoration: none;
    color: #1FB98E;
}
a:hover {
    font-weight: 900;
}
.logo{
  width: 50px;
  height: 50px;
  fill: red;
}
.header {
  display: flex;
  justify-content: space-between;
}
h1 {
    font-size: 2em;
    font-family:'Helvetica Neue', 'helvetica', 'Arial', 'Sans-Serif';
    text-align: right;
    line-height: 0;
    cursor: default;
}
p {
    font-size: 1em;
    color: #333;
}
footer {
    border-top: 1px solid #d5d5d5;
    font-size: .8em;
}

